--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "buffer": "^6.0.3",
     "emoji-utils": "^1.0.1",
     "jsqr": "^1.4.0",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "moment": "^2.29.1",
+    "native-base": "^3.3.11",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-audio-recorder-player": "^3.1.2",
@@ -70,14 +73,14 @@
     "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.4.0",
     "react-native-sha256": "^1.4.7",
     "react-native-share": "^6.2.1",
     "react-native-simple-toast": "^1.1.3",
     "react-native-skeleton-content-nonexpo": "^1.0.11",
     "react-native-slider": "^0.11.0",
-    "react-native-svg": "^12.0.3",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-toast-message": "^2.1.1",
     "react-native-typing-animation": "^0.1.7",
@@ -98,11 +101,16 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^18.0.0",
+    "@types/react-native": "^0.67.3",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "react-native"
