--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-clipboard/clipboard": "^1.10.0",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-native-firebase/app": "^14.9.1",
     "@react-native-firebase/auth": "^14.9.1",
@@ -33,17 +34,23 @@
     "pngjs": "^6.0.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-audio-recorder-player": "^3.5.0",
     "react-native-camera": "^4.2.1",
     "react-native-device-info": "^8.7.1",
+    "react-native-document-picker": "^8.1.0",
     "react-native-draggable-flatlist": "^3.1.1",
+    "react-native-fast-image": "^8.5.11",
     "react-native-fbsdk-next": "^8.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-highlight-words": "^1.0.1",
     "react-native-image-picker": "^4.8.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-permissions": "^3.3.1",
+    "react-native-pulse": "^1.0.7",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "^2.8.0",
@@ -52,12 +59,17 @@
     "react-native-screens": "^3.13.1",
     "react-native-sha256": "^1.4.7",
     "react-native-share": "^7.4.0",
+    "react-native-skeleton-content-nonexpo": "^1.0.13",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-player": "^0.12.0",
     "react-native-walkthrough-tooltip": "^1.3.1",
-    "realm": "^10.8.0"
+    "realm": "^10.17.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
