--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mobx-react-lite": "^3.4.0",
     "native-base": "^3.4.4",
     "pngjs": "^6.0.0",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-audio-recorder-player": "^3.5.0",
@@ -51,9 +52,10 @@
     "react-native-pager-view": "^5.4.15",
     "react-native-permissions": "^3.3.1",
     "react-native-pulse": "^1.0.7",
+    "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-reanimated": "^2.8.0",
+    "react-native-reanimated": "^2.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
@@ -68,7 +70,7 @@
     "react-native-video": "^5.2.0",
     "react-native-video-player": "^0.12.0",
     "react-native-walkthrough-tooltip": "^1.3.1",
-    "realm": "^10.17.0",
+    "realm": "^10.20.0-beta.5",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
