--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsqr": "^1.4.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
+    "moment": "^2.29.3",
     "native-base": "^3.4.4",
     "pngjs": "^6.0.0",
     "qs": "^6.10.3",
