--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-highlight-words": "^1.0.1",
+    "react-native-hyperlink": "^0.0.19",
     "react-native-image-picker": "^4.8.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.1",
@@ -67,6 +68,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
+    "react-native-typing-animation": "^0.1.7",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
     "react-native-video-player": "^0.12.0",
