--- a/.github/workflows/pushClientWebToDockerHub.yml
+++ b/.github/workflows/pushClientWebToDockerHub.yml
@@ -1,15 +1,13 @@
-name: Build and Push Docker image for client-web to DockerHub
-
+name: name
 on:
-	push:
-		branches:
-			- main
-		path:
-			- '/client-web/**'
-	jobs:
-		push_to_registry:
-			name: Push Docker image to Docker Hub
-			runs-on: ubuntu-latest
-			steps:
-				- name: Check out the repo
-					uses: actions/checkout@v3
+  push:
+    branches:
+      - "auction"
+    paths:
+      - "/client-web"
+jobs:
+  push_to_registry:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
