--- a/.github/workflows/pushClientWebToDockerHub.yml
+++ b/.github/workflows/pushClientWebToDockerHub.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - "auction"
     paths:
-      - "/client-web"
+      - "/client-web/**"
 jobs:
   push_to_registry:
     runs-on: ubuntu-latest
