--- a/client-reactnative/package.json
+++ b/client-reactnative/package.json
@@ -69,6 +69,7 @@
     "react-native-blob-util": "^0.16.2",
     "react-native-bootsplash": "^5.1.3",
     "react-native-camera": "^4.2.1",
+    "react-native-check-box": "^2.1.7",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^10.4.0",
     "react-native-document-picker": "^8.1.0",
@@ -104,6 +105,7 @@
     "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
