--- a/client-reactnative/package.json
+++ b/client-reactnative/package.json
@@ -8,8 +8,8 @@
     "start": "react-native start",
     "startReset": "react-native start --reset-cache",
     "test": "jest",
-    "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "detox ios": "detox test --configuration ios.sim.debug ",
     "detox android": "detox test --configuration android.emu.debug ",
     "postinstall": "rn-nodeify --install 'crypto,process,stream,events' --hack"
@@ -36,7 +36,6 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@realm/react": "^0.2.1",
     "@types/node": "^18.14.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@walletconnect/modal-react-native": "^1.0.0-rc.6",
     "@xmpp/client": "^0.13.1",
     "@xmpp/debug": "^0.13.0",
@@ -48,7 +47,7 @@
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.6",
     "diff": "^5.1.0",
-    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-prettier": "^5.1.0",
     "ethers": "5.7.2",
     "events": "^3.3.0",
     "husky": "^8.0.3",
@@ -67,6 +66,7 @@
     "react-native": "0.68.1",
     "react-native-audio-recorder-player": "^3.5.1",
     "react-native-blob-util": "^0.16.2",
+    "react-native-bootsplash": "^5.1.0",
     "react-native-camera": "^4.2.1",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^10.4.0",
@@ -124,6 +124,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/runtime": "^7.12.5",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^29.4.0",
     "@types/pngjs": "^6.0.1",
@@ -133,16 +134,25 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-native-video-player": "^0.10.3",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^29.4.3",
     "detox": "^20.1.3",
-    "eslint": "^8.54.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-unicorn": "^49.0.0",
+    "eslint-plugin-vue": "^9.18.1",
     "jest": "^29.4.3",
     "jest-circus": "^29.4.3",
     "metro-babel-register": "^0.75.0",
     "metro-react-native-babel-preset": "^0.67.0",
     "pretty-quick": "^3.1.3",
+    "prettier": "^3.0.3",
     "react-dom": "^18.2.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "17.0.2",
     "reactotron-react-native": "^5.0.3",
     "rn-nodeify": "^10.3.0",
