--- a/experimental-chat-component/package.json
+++ b/experimental-chat-component/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "@types/styled-components": "^5.1.34",
+    "@xmpp/client": "^0.13.1",
+    "ltx": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "@types/xmpp__client": "^0.13.3"
   }
 }
