--- a/client-web/package.json
+++ b/client-web/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
     "react-content-loader": "^6.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
