--- a/client-web/package.json
+++ b/client-web/package.json
@@ -45,6 +45,7 @@
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.36.0",
+    "react-icons": "^5.1.0",
     "react-image-crop": "^10.0.8",
     "react-qr-code": "^2.0.8",
     "react-router": "^5.3.3",
