--- a/client-web/package.json
+++ b/client-web/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.2.9",
     "immer": "^10.0.2",
     "js-sha256": "^0.9.0",
+    "overlayscrollbars": "^2.7.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
