today, yesterday for the ChatDateDevider

--- a/client-web/package.json
+++ b/client-web/package.json
@@ -34,12 +34,11 @@
     "formik": "^2.2.9",
     "immer": "^10.0.2",
     "js-sha256": "^0.9.0",
-    "overlayscrollbars": "^2.7.2",
+    "luxon": "^3.4.4",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
     "react-content-loader": "^6.2.0",
-    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
@@ -84,6 +83,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^2.4.0",
+    "@types/luxon": "^3.4.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/stripe": "^8.0.417",
     "@types/xmpp__client": "^0.13.0",
