--- a/client-web/package.json
+++ b/client-web/package.json
@@ -35,6 +35,7 @@
     "immer": "^10.0.2",
     "js-sha256": "^0.9.0",
     "luxon": "^3.4.4",
+    "node-sass": "^9.0.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
