--- a/client-web/package.json
+++ b/client-web/package.json
@@ -50,9 +50,11 @@
     "react-icons": "^5.1.0",
     "react-image-crop": "^10.0.8",
     "react-qr-code": "^2.0.8",
+    "react-redux": "^9.1.2",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "recharts": "^2.1.14",
+    "redux": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
