--- a/client-web/package.json
+++ b/client-web/package.json
@@ -37,10 +37,13 @@
     "js-sha256": "^0.9.0",
     "luxon": "^3.4.4",
     "node-sass": "^9.0.0",
+    "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.4",
+    "react-avatar": "^5.0.3",
     "react-content-loader": "^6.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
@@ -92,6 +95,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "core-js-pure": "^3.37.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-loops": "^0.3.0",
