--- a/client-web/package.json
+++ b/client-web/package.json
@@ -32,6 +32,7 @@
     "ethers": "^5.7.1",
     "firebase": "^9.12.1",
     "formik": "^2.2.9",
+    "framer-motion": "^11.3.30",
     "immer": "^10.0.2",
     "js-sha256": "^0.9.0",
     "qs": "^6.11.0",
